--- a/assets/index.html
+++ b/assets/index.html
@@ -18,22 +18,6 @@
         </video>
         <button>Play / Pause</button>
     </main>
-    <script>
-        const video =document.querySelector("video");
-        const button =document.querySelector("button");
-
-        function MediaPlayer (config) {
-            this.media = config.el;
-        }
-
-        MediaPlayer.prototype.play = function () {
-            this.media.play();
-        }
-
-        const player = new MediaPlayer({ el: video }); 
-        button.onclick = () => player.play();
-
-        
-    </script>
+    <script src = ./index.js></script>
 </body>
 </html>
