Agregando boton de mute

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,8 +16,10 @@
         <video class="movie">
             <source src="./Proporciones.mp4">
         </video>
-        <button>Play / Pause</button>
+        <button id = "boton_play">Play / Pause</button>
+        <button id = "boton_mute">Mute</button>
+
     </main>
-    <script src = ./index.js></script>
+    <script type = "module" src = ./index.js></script>
 </body>
 </html>
